--- a/index.html
+++ b/index.html
@@ -1,96 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Muskan 💖</title>
+<title>Muskan 💖</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<style>
+* {
+    box-sizing: border-box;
+}
 
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+body {
+    margin: 0;
+    height: 100vh;
+    overflow: hidden;
+    background: linear-gradient(135deg,#ffb6c1,#ffc0cb,#ffd1dc);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    color: white;
+}
 
-        body {
-            margin: 0;
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            flex-direction: column;
-            background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #ffdde1);
-            background-size: 400% 400%;
-            animation: gradient 12s ease infinite;
-            font-family: 'Poppins', sans-serif;
-            color: white;
-            position: relative;
-        }
+h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 36px;
+    margin-bottom: 10px;
+}
 
-        @keyframes gradient {
-            0% {background-position: 0% 50%;}
-            50% {background-position: 100% 50%;}
-            100% {background-position: 0% 50%;}
-        }
+h2 {
+    font-size: 18px;
+    margin-bottom: 60px;
+}
 
-        h1 {
-            font-family: 'Pacifico', cursive;
-            font-size: 42px;
-            margin-bottom: 10px;
-        }
-
-        h2 {
-            font-size: 20px;
-            margin-bottom: 40px;
-        }
-
-        button {
-    width: 120px;
-    height: 45px;
+button {
+    width: 140px;
+    height: 50px;
     border: none;
-    border-radius: 50px;
+    border-radius: 40px;
+    font-size: 18px;
     cursor: pointer;
     transition: 0.25s ease;
-    position: fixed;
-    font-size: 16px;
-        }
+    position: absolute;
+}
 
-        #yesBtn {
-    background-color: #ff4d88;
+#yesBtn {
+    background: #ff3f7f;
     color: white;
-    left: 25%;
-    top: 75%;
-    transform: translate(-50%, -50%);
-        }
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(-80%);
+}
 
-        #noBtn {
-    background-color: white;
-    color: #ff4d88;
-    left: 70%;
-    top: 75%;
-    transform: translate(-50%, -50%);
-        }
+#noBtn {
+    background: white;
+    color: #ff3f7f;
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(20%);
+}
 
+.heart {
+    position: absolute;
+    font-size: 18px;
+    animation: float 5s linear infinite;
+}
 
-        .heart {
-            position: fixed;
-            font-size: 20px;
-            animation: float 5s linear infinite;
-        }
-
-        @keyframes float {
-            from { transform: translateY(100vh); opacity:1; }
-            to { transform: translateY(-10vh); opacity:0; }
-        }
-
-        @media (max-width: 480px) {
-            h1 { font-size: 34px; }
-            h2 { font-size: 18px; }
-        }
-    </style>
+@keyframes float {
+    from { transform: translateY(100vh); opacity:1; }
+    to { transform: translateY(-10vh); opacity:0; }
+}
+</style>
 </head>
+
 <body>
 
 <audio id="bgMusic" loop>
@@ -104,70 +89,53 @@
 <button id="noBtn">No 🙈</button>
 
 <script>
-    const music = document.getElementById("bgMusic");
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
+const music = document.getElementById("bgMusic");
+const yesBtn = document.getElementById("yesBtn");
+const noBtn = document.getElementById("noBtn");
 
-    let yesScale = 1;
-    let noScale = 1;
+let yesGrow = 1;
 
-    // Start music
-    document.body.addEventListener("click", function startMusic() {
-        music.volume = 0.7;
-        music.play().catch(() => {});
-        document.body.removeEventListener("click", startMusic);
-    });
+// Start music
+document.body.addEventListener("click", function startMusic() {
+    music.volume = 0.7;
+    music.play().catch(()=>{});
+    document.body.removeEventListener("click", startMusic);
+});
 
-    function moveButton() {
+function moveNoButton() {
 
-        const padding = 60;
+    const maxX = window.innerWidth - 150;
+    const maxY = window.innerHeight - 120;
 
-        const maxX = window.innerWidth - padding;
-        const maxY = window.innerHeight - padding;
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
 
-        const x = Math.random() * maxX;
-        const y = Math.random() * maxY;
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
 
-        noBtn.style.left = x + "px";
-        noBtn.style.top = y + "px";
-        noBtn.style.transform = `translate(-50%, -50%) scale(${noScale})`;
-
-        // Shrink NO safely
-        if (noScale > 0.5) {
-            noScale -= 0.07;
-        }
-
-        // Grow YES safely
-        if (yesScale < 1.6) {
-            yesScale += 0.07;
-            yesBtn.style.transform = `translate(-50%, -50%) scale(${yesScale})`;
-        }
+    // Grow YES only
+    if (yesGrow < 1.6) {
+        yesGrow += 0.08;
+        yesBtn.style.transform = `scale(${yesGrow})`;
     }
+}
 
-    noBtn.addEventListener("touchstart", moveButton);
-    noBtn.addEventListener("mouseover", moveButton);
+noBtn.addEventListener("touchstart", moveNoButton);
+noBtn.addEventListener("mouseover", moveNoButton);
 
-    yesBtn.addEventListener("click", () => {
-        document.body.innerHTML = `
-            <div style="text-align:center;">
-                <h1 style="font-family:'Pacifico',cursive;font-size:38px;">
-                    Please Accept 🥺🙏
-                </h1>
-                <p style="font-size:18px;">
-                    This would mean everything to me 💕
-                </p>
-            </div>
-        `;
+yesBtn.addEventListener("click", () => {
+    document.body.innerHTML = `
+        <h1 style="font-family:'Pacifico',cursive;">
+        Please Accept 🥺🙏
+        </h1>
+        <p>This would mean everything to me 💕</p>
+    `;
 
-        setTimeout(() => {
-            window.location.href = "https://www.instagram.com/demm.m01112026/";
-        }, 2500);
-    });
+    setTimeout(()=>{
+        window.location.href="https://www.instagram.com/demm.m01112026/";
+    },2500);
+});
 </script>
-
 
 </body>
 </html>
-
-
-
