--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@ yesBtn.addEventListener("click", function(e){
     `;
 
     setTimeout(function(){
-        window.location.href = "https://www.instagram.com/demm.m01112026/";
+        window.location.href = "https://www.instagram.com/demm.m01112026/?utm_source=ig_web_button_share_sheet";
     },2500);
 });
 </script>
 
 </body>
 </html>
+
