--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ const noBtn = document.getElementById("noBtn");
 const musicToggle = document.getElementById("musicToggle");
 
 let isPlaying = false;
+let yesScale = 1;
 
 // 🎵 Toggle Music
 musicToggle.addEventListener("click", function(e){
@@ -120,7 +121,7 @@ musicToggle.addEventListener("click", function(e){
     }
 });
 
-// Move NO button safely
+// Move NO button
 function moveNo(e){
     e.preventDefault();
     e.stopPropagation();
@@ -133,6 +134,12 @@ function moveNo(e){
 
     noBtn.style.left = x + "px";
     noBtn.style.top = y + "px";
+
+    // ✅ Grow YES safely
+    if (yesScale < 1.8) {
+        yesScale += 0.08;
+        yesBtn.style.transform = `translate(-50%, -50%) scale(${yesScale})`;
+    }
 }
 
 noBtn.addEventListener("touchstart", moveNo, { passive:false });
@@ -142,7 +149,7 @@ noBtn.addEventListener("click", function(e){
     e.stopPropagation();
 });
 
-// YES button action
+// YES button click
 yesBtn.addEventListener("click", function(e){
     e.stopPropagation();
 
@@ -154,10 +161,11 @@ yesBtn.addEventListener("click", function(e){
     `;
 
     setTimeout(function(){
-        window.location.href = "https://www.instagram.com/demm.m01112026/?utm_source=ig_web_button_share_sheet";
+        window.location.href = "https://www.instagram.com/demm.m01112026/";
     },2500);
 });
 </script>
+
 
 </body>
 </html>
