--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ yesBtn.addEventListener("click", function(e){
             </h1>
             <p>This would mean everything to me 💕</p>
             <br><br>
-            <a href="https://instagram.com/_u/demm.m01112026"
+            <a href="https://www.instagram.com/demm.m01112026?igsh=MTZkeTc3N3lyYW95bw=="
                style="
                     display:inline-block;
                     padding:12px 25px;
@@ -182,3 +182,4 @@ yesBtn.addEventListener("click", function(e){
 
 </body>
 </html>
+
