--- a/index.html
+++ b/index.html
@@ -158,28 +158,27 @@ yesBtn.addEventListener("click", function(e){
             <h1 style="font-family:'Pacifico',cursive;">
                 Please Accept 🥺🙏
             </h1>
-            <p>This would mean everything to me 💕</p>
+            <p>Scan this to follow me 💕</p>
             <br><br>
-            <a href="https://www.instagram.com/demm.m01112026?igsh=MTZkeTc3N3lyYW95bw=="
-               style="
-                    display:inline-block;
-                    padding:12px 25px;
-                    background:#ff3f7f;
-                    color:white;
-                    border-radius:30px;
-                    text-decoration:none;
-                    font-size:18px;
-               ">
-               Open My Instagram 💖
-            </a>
+
+            <img src="qr.png"
+                 style="
+                    width:220px;
+                    max-width:80%;
+                    border-radius:20px;
+                    box-shadow:0 10px 30px rgba(0,0,0,0.2);
+                 ">
+
         `;
 
         document.body.style.opacity = "1";
 
     }, 600);
+
 });
 </script>
 
 </body>
 </html>
+
 
