--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ yesBtn.addEventListener("click", function(e){
 
         document.body.innerHTML = `
             <h1 style="font-family:'Pacifico',cursive;">
-                Please Accept 🥺🙏
+                Thanks for Accepting 🥺🙏
             </h1>
             <p>Scan this to follow me 💕</p>
             <br><br>
@@ -180,5 +180,6 @@ yesBtn.addEventListener("click", function(e){
 
 </body>
 </html>
+
 
 
